--- a/website/galerij.html
+++ b/website/galerij.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1>Zaanse Schans</h1>
-        <img src="pics/Schanslogo.jpg" alt="Zaanseschans logo aan het water met molens" width="200" height="100">
+        <img src="pics/schanslogo.jpg" alt="Zaanseschans logo aan het water met molens" width="200" height="100">
         </header>
         <br>
         
